# django-tailwindcss-auth

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml
app/: admin.py  constants.py  forms.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_mediafile.py  0003_alter_mediafile_file_project_mediafile_project.py
config/: settings.py  urls.py
static/css/: output.css
templates/: base.html  index.html
templates/auth/: activate.html  login.html  signup.html  signup_done.html
templates/multimedia/: delete.html  detail.html  list.html  rename.html  upload.html
templates/projects/: create.html  delete.html  list.html
