[project]
name = "django-tailwindcss-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.7",
    "django-anymail>=13.1",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.37.0",
    "uvicorn-worker>=0.4.0",
]
